fixed delete visibility

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,7 +210,7 @@ h4 {
     margin-top: 0;
 }
 #comment {
-    min-width: 100%;
+    min-width: 70vw;
     min-height: 15vh;
     background-color: rgba(0, 200, 255, 0.759);
 }
@@ -265,10 +265,12 @@ h4 {
 }
 
 .single-post {
-    width:  79.5vw!important;
+    /* width:  79.5vw!important; */
     padding: 1vh 5vw;
 }
-
+.modal {
+     display: none 
+    }
 .topic-list {
     width: 67vw;
 }
